kubernetes/apps/hh-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hh-bot-account-1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hh-bot-account-1
  template:
    metadata:
      labels:
        app: hh-bot-account-1
    spec:
      containers:
      - name: bot
        image: vanya23213445/hh-bot:v1 # <--- Ваш новый логин Docker Hub
        imagePullPolicy: Always
        volumeMounts:
        - name: bot-data
          mountPath: /app/data
      volumes:
      - name: bot-data
        persistentVolumeClaim:
          claimName: hh-bot-data-account-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hh-bot-account-2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hh-bot-account-2
  template:
    metadata:
      labels:
        app: hh-bot-account-2
    spec:
      containers:
      - name: bot
        image: vanya23213445/hh-bot:v1 # <--- Ваш новый логин Docker Hub
        imagePullPolicy: Always
        volumeMounts:
        - name: bot-data
          mountPath: /app/data
      volumes:
      - name: bot-data
        persistentVolumeClaim:
          claimName: hh-bot-data-account-2
