kubernetes/apps/speedtest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
      - name: openspeedtest
        image: openspeedtest/latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest-svc
spec:
  type: NodePort
  selector:
    app: speedtest
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30030
